힙사이즈에 따른 gc 실험